Add debug div to cgtshop-v0.83.html
Temp helper
<div id="debug" style="color:#0f0; font-size:12px; white-space:pre-line; text-align:left; padding:10px;"></div>

--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -62,5 +62,6 @@
 
   <script src="founder-data.js"></script>
   <script src="cgtshop-v0.83.js"></script>
+<div id="debug" style="color:#0f0; font-size:12px; white-space:pre-line; text-align:left; padding:10px;"></div>
 </body>
 </html>
