--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -1,15 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CGTShop v0.83</title>
-  <link rel="stylesheet" href="cgtshop-styles.css" />
+  <link rel="stylesheet" href="cgtshop-style.css" />
 </head>
-<body style="background:#0b0c10;color:white;font-family:sans-serif;text-align:center;">
-  <h3>CGTShop v0.83 Test</h3>
-  <div id="game"></div>
+<body>
+  <header>
+    <div class="hud">
+      <div class="pill"><span class="k">Day</span><span class="v" id="hudDay">1</span></div>
+      <div class="pill"><span class="k">Price</span><span class="v" id="hudPrice">$0.00000000</span></div>
+      <div class="pill"><span class="k">Market Cap</span><span class="v" id="hudMC">$10,000</span></div>
+    </div>
+    <span class="brand-badge">CGT</span>
+  </header>
 
+  <main class="stage">
+    <section class="card" id="game">
+      <!-- game dynamically renders here -->
+    </section>
+  </main>
+
+  <!-- Bias HUD injected by JS -->
   <script src="founder-data.js"></script>
   <script src="cgtshop-v0.83.js"></script>
 </body>
