--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -379,6 +379,81 @@
       font-size:14px;
     }
   }
+  /* ======================================================
+   Dynamic Slider Theme (Bold ↔ Conservative)
+   ====================================================== */
+
+/* Main slider transition container */
+.sliderWrap input[type="range"] {
+  transition: all 0.45s ease-in-out;
+}
+
+/* ===========================
+   TRACK gradients
+   =========================== */
+
+/* Conservative = fade to the RIGHT (green) */
+.card.cons-mode input[type="range"]::-webkit-slider-runnable-track {
+  background: linear-gradient(to right,
+    rgba(124,240,138,0.9),
+    rgba(124,240,138,0)
+  );
+}
+.card.cons-mode input[type="range"]::-moz-range-track {
+  background: linear-gradient(to right,
+    rgba(124,240,138,0.9),
+    rgba(124,240,138,0)
+  );
+}
+
+/* Bold = fade to the LEFT (blue) */
+.card.bold-mode input[type="range"]::-webkit-slider-runnable-track {
+  background: linear-gradient(to left,
+    rgba(135,180,255,0.9),
+    rgba(135,180,255,0)
+  );
+}
+.card.bold-mode input[type="range"]::-moz-range-track {
+  background: linear-gradient(to left,
+    rgba(135,180,255,0.9),
+    rgba(135,180,255,0)
+  );
+}
+
+/* ===========================
+   THUMB colors
+   =========================== */
+
+/* Conservative thumb = green */
+.card.cons-mode input[type="range"]::-webkit-slider-thumb {
+  background: rgba(124,240,138,1);
+}
+.card.cons-mode input[type="range"]::-moz-range-thumb {
+  background: rgba(124,240,138,1);
+}
+
+/* Bold thumb = blue */
+.card.bold-mode input[type="range"]::-webkit-slider-thumb {
+  background: rgba(135,180,255,1);
+}
+.card.bold-mode input[type="range"]::-moz-range-thumb {
+  background: rgba(135,180,255,1);
+}
+
+/* ===========================
+   CARD glow animation
+   =========================== */
+.card {
+  transition: box-shadow 0.45s ease-in-out;
+}
+
+.card.bold-mode {
+  box-shadow: 0 0 24px rgba(135,180,255,0.28);
+}
+
+.card.cons-mode {
+  box-shadow: 0 0 24px rgba(124,240,138,0.28);
+}
 </style>
 </head>
 <body>
