Change cons-track gradient direction to right

--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -15,7 +15,7 @@
     --bad:#ff8a8a;
     --hint:#c8d6e5;
     --bold-track:linear-gradient(to right, rgba(135,180,255,.8), rgba(135,180,255,0));
-    --cons-track:linear-gradient(to left, rgba(124,240,138,.8), rgba(124,240,138,0));
+    --cons-track:linear-gradient(to right, rgba(124,240,138,.8), rgba(124,240,138,0));
   }
   *{box-sizing:border-box}
   html,body{height:100%}
