--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -392,9 +392,9 @@
    TRACK gradients
    =========================== */
 
-/* Conservative = fade to the RIGHT (green) */
+/* Conservative = fade to the LEFT (green) */
 .card.cons-mode input[type="range"]::-webkit-slider-runnable-track {
-  background: linear-gradient(to right,
+  background: linear-gradient(to left,
     rgba(124,240,138,0.9),
     rgba(124,240,138,0)
   );
