--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -1010,6 +1010,7 @@ function showOutcome(isFavourable, mult, text, scenario, oldMC, newMC){
   // Hide the main scenario header during outcome
 elTitle.classList.add('vanish');
 elDesc.classList.add('vanish');
+elCard.classList.add('outcome-mode');
   elControls.style.opacity = 0;
 
   elBigMsg.className = 'bigMsg ' + (isFavourable ? 'good' : 'bad');
@@ -1062,6 +1063,7 @@ function nextDay(){
   if (price <= 0) return;
   elTitle.classList.remove('vanish');
 elDesc.classList.remove('vanish');
+elCard.classList.remove('outcome-mode');
 
   day += 1;
   updateHUD();
@@ -1071,6 +1073,7 @@ elDesc.classList.remove('vanish');
 function restartGame(){
   elTitle.classList.remove('vanish');
 elDesc.classList.remove('vanish');
+elCard.classList.remove('outcome-mode');
   day = 1;
   price = 10_000 / SUPPLY;
   updateHUD();
