--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -588,6 +588,12 @@
   height: 0 !important;
   min-height: 0 !important;
 }
+.card.outcome-mode {
+  justify-content: flex-start !important;
+  padding-top: 40px !important;
+  padding-bottom: 40px !important;
+  min-height: auto !important;
+}
 </style>
 </head>
 <body>
