--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -594,6 +594,14 @@
   padding-bottom: 40px !important;
   min-height: auto !important;
 }
+/* ================================
+   Fix spacing when showing outcome
+   ================================ */
+
+.stage:has(.outcome-mode) {
+  align-items: flex-start !important;
+  padding-top: 40px !important;
+}
 </style>
 </head>
 <body>
